--- a/src/components/Cart/Checkout.module.css
+++ b/src/components/Cart/Checkout.module.css
@@ -52,6 +52,7 @@
   .actions .submit:active {
     background-color: #7a2706;
   }
+
   
   .invalid label {
     color: #ca3e51;
@@ -60,4 +61,10 @@
   .invalid input {
     border-color: #aa0b20;
     background-color: #ffeff1;
+  }
+
+  .actions .submit:disabled {
+    background: #dddddd;
+    color: rgb(61, 60, 60);
+    border: none;
   }
